--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./index.js"
+	"clean": "node ./clean.js",
+    "start": "npm run-script clean && node ./index.js"
   },
   "author": "Max Stoumen",
   "license": "ISC",
